[package]
name = "newsletter"
version = "0.1.0"
edition = "2021"
authors = ["Danyiel Colin <amaniel2718@protonmail.com>"]

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "newsletter"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
tokio = { version="1.21.2", features=["macros", "rt-multi-thread"]}

[dev-dependencies]
reqwest = "0.11"
