[package]
name = "hello-world"
version.workspace = true
edition.workspace = true

[dependencies]
hello-world-io.workspace = true
gstd = { workspace = true, features = ["debug"] }
parity-scale-codec.workspace = true
scale-info.workspace = true
gmeta.workspace = true
hashbrown.workspace = true

[build-dependencies]
gear-wasm-builder.workspace = true
gmeta.workspace = true
hello-world-io.workspace = true

[dev-dependencies]
gstd = { workspace = true, features = ["debug"] }
gtest.workspace = true
gclient.workspace = true

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
hello-world-io = { path = "io" }
gstd = { git = "https://github.com/gear-tech/gear.git", tag = "v1.0.5" }
gclient = { git = "https://github.com/gear-tech/gear.git", tag = "v1.0.5" }
gmeta = { git = "https://github.com/gear-tech/gear.git", tag = "v1.0.5" }
gtest = { git = "https://github.com/gear-tech/gear.git", tag = "v1.0.5" }
gear-wasm-builder = { git = "https://github.com/gear-tech/gear.git", tag = "v1.0.5" }
parity-scale-codec = { version = "3.6.9", default-features = false }
scale-info = { version = "2.10.0", default-features = false }
hashbrown = "0.14.3"

[features]
binary-vendor = []
