[package]
name = "escrow-state"
version.workspace = true
edition.workspace = true

[dependencies]
escrow-io.workspace = true
gstd.workspace = true
gmeta = { workspace = true, features = ["codegen"] }
parity-scale-codec.workspace = true
scale-info.workspace = true

[build-dependencies]
gear-wasm-builder = { workspace = true, features = ["metawasm"] }

[features]
binary-vendor = []
default = ["binary-vendor"]
